// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`album 1`] = `
Object {
  "author": "Sody",
  "name": "real growth takes time - EP",
  "tracks": Array [
    Object {
      "artist": "Sody",
      "title": "butterfly",
    },
    Object {
      "artist": "Sody",
      "title": "hold it all together",
    },
    Object {
      "artist": "Sody",
      "title": "i'll be there",
    },
    Object {
      "artist": "Sody",
      "title": "scary part of me",
    },
    Object {
      "artist": "Sody",
      "title": "time again",
    },
    Object {
      "artist": "Sody",
      "title": "i've got you",
    },
  ],
  "type": "album",
}
`;

exports[`autogetalbum 1`] = `
Object {
  "author": "Sody",
  "name": "real growth takes time - EP",
  "tracks": Array [
    Object {
      "artist": "Sody",
      "title": "butterfly",
    },
    Object {
      "artist": "Sody",
      "title": "hold it all together",
    },
    Object {
      "artist": "Sody",
      "title": "i'll be there",
    },
    Object {
      "artist": "Sody",
      "title": "scary part of me",
    },
    Object {
      "artist": "Sody",
      "title": "time again",
    },
    Object {
      "artist": "Sody",
      "title": "i've got you",
    },
  ],
  "type": "album",
}
`;

exports[`autogetplaylist 1`] = `
Object {
  "author": "Apple Music Pop Latino",
  "name": "Soda Stereo Essentials",
  "tracks": Array [
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "De Música Ligera",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "Persiana Américana",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "Ella Usó Mi Cabeza Como un Revólver",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Cuando Pase el Temblor",
    },
    Object {
      "album": "Dynamo",
      "artist": "Soda Stereo",
      "title": "Primavera 0",
    },
    Object {
      "album": "MTV Unplugged: Comfort y Música para Volar",
      "artist": "Soda Stereo",
      "title": "En la Ciudad de la Furia",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "Té para Tres",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "Trátame Suavemente",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "Canción Animal",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "Signos",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "Un Misil en Mi Placard",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Juegos de Seducción",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "Zoom",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Nada Personal",
    },
    Object {
      "album": "El Último Concierto B (En Vivo)",
      "artist": "Soda Stereo",
      "title": "Un Millón de Años Luz (En Vivo)",
    },
  ],
  "type": "playlist",
}
`;

exports[`autogetsong 1`] = `
Object {
  "album": "real growth takes time - EP",
  "artist": "Sody",
  "title": "butterfly",
  "type": "song",
}
`;

exports[`playlist 1`] = `
Object {
  "author": "Apple Music Pop Latino",
  "name": "Soda Stereo Essentials",
  "tracks": Array [
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "De Música Ligera",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "Persiana Américana",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "Ella Usó Mi Cabeza Como un Revólver",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Cuando Pase el Temblor",
    },
    Object {
      "album": "Dynamo",
      "artist": "Soda Stereo",
      "title": "Primavera 0",
    },
    Object {
      "album": "MTV Unplugged: Comfort y Música para Volar",
      "artist": "Soda Stereo",
      "title": "En la Ciudad de la Furia",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "Té para Tres",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "Trátame Suavemente",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "Canción Animal",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "Signos",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "Un Misil en Mi Placard",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Juegos de Seducción",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "Zoom",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "Nada Personal",
    },
    Object {
      "album": "El Último Concierto B (En Vivo)",
      "artist": "Soda Stereo",
      "title": "Un Millón de Años Luz (En Vivo)",
    },
  ],
  "type": "playlist",
}
`;

exports[`slowPlaylist 1`] = `
Object {
  "author": "Apple Music Pop Latino",
  "name": "Soda Stereo Essentials",
  "tracks": Array [
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "de-m%C3%BAsica-ligera",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "persiana-am%C3%A9ricana",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "ella-us%C3%B3-mi-cabeza-como-un-rev%C3%B3lver",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "cuando-pase-el-temblor",
    },
    Object {
      "album": "Dynamo",
      "artist": "Soda Stereo",
      "title": "primavera-0",
    },
    Object {
      "album": "MTV Unplugged: Comfort y Música para Volar",
      "artist": "Soda Stereo",
      "title": "en-la-ciudad-de-la-furia",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "t%C3%A9-para-tres",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "tr%C3%A1tame-suavemente",
    },
    Object {
      "album": "Canción Animal",
      "artist": "Soda Stereo",
      "title": "canci%C3%B3n-animal",
    },
    Object {
      "album": "Signos",
      "artist": "Soda Stereo",
      "title": "signos",
    },
    Object {
      "album": "Soda Stereo",
      "artist": "Soda Stereo",
      "title": "un-misil-en-mi-placard",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "juegos-de-seducci%C3%B3n",
    },
    Object {
      "album": "Sueño Stereo",
      "artist": "Soda Stereo",
      "title": "zoom",
    },
    Object {
      "album": "Nada Personal",
      "artist": "Soda Stereo",
      "title": "nada-personal",
    },
    Object {
      "album": "El Último Concierto B (En Vivo)",
      "artist": "Soda Stereo",
      "title": "un-mill%C3%B3n-de-a%C3%B1os-luz-en-vivo",
    },
  ],
  "type": "playlist",
}
`;

exports[`song 1`] = `
Object {
  "album": "real growth takes time - EP",
  "artist": "Sody",
  "title": "butterfly",
  "type": "song",
}
`;
